--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "CAPS will simulate a delivery service where vendors (such a flower shops) will ship products using our delivery service and when our drivers deliver them, be notified that their customers received what they purchased.",
   "main": "index.js",
   "scripts": {
-    "test": "jest --verbose --coverage"
+    "test": "jest --verbose --coverage",
+    "lint": "eslint .",
+    "lint:fix": "npm run lint --silent -- --fix",
+    "lint:watch": "onchange \"./**/*.js\" -- onerror \"npm run lint --silent\""
   },
   "repository": {
     "type": "git",
