--- a/.github/workflows/javascript-tests.yml
+++ b/.github/workflows/javascript-tests.yml
@@ -1,4 +1,4 @@
-name: Run Javascript Tests
+name: Node.js CI
 
 on: [ push, pull_request]
 
@@ -12,14 +12,11 @@ jobs:
         node-version: [14.x]
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - name: npm install, build, and test
-      run: |
-        npm i
-        npm test
-      env:
-        CI: true
+    - run: npm ci
+    - run: npm run build --if-present
+    - run: npm test
