--- a/driver/package.json
+++ b/driver/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "socket.io-client": "^2.3.0"
   }
 }
